--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -8,8 +8,8 @@
 	<body epub:type="frontmatter">
 		<section id="epigraph" epub:type="epigraph">
 			<blockquote>
-				<p>"A turquoise set in silver; wasn't it?...Yes, a turquoise set in dull silver.</p>
-				<cite>—Louie Marsellus</cite>
+				<p>“A turquoise set in silver; wasn’t it?⁠ ⁠… Yes, a turquoise set in dull silver.</p>
+				<cite>—⁠Louie Marsellus</cite>
 			</blockquote>
 		</section>
 	</body>
