--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,173 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/dedication.xhtml">Dedication</a>
+				</li>
+				<li>
+					<a href="text/epigraph.xhtml">Epigraph</a>
+				</li>
+				<li>
+					<a href="text/halftitlepage.xhtml">The Professor’s House</a>
+					<ol>
+						<li>
+							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Family</a>
+							<ol>
+								<li>
+									<a href="text/chapter-1-1.xhtml">
+										<span epub:type="ordinal z3998:roman">I</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-2.xhtml">
+										<span epub:type="ordinal z3998:roman">II</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-3.xhtml">
+										<span epub:type="ordinal z3998:roman">III</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-4.xhtml">
+										<span epub:type="ordinal z3998:roman">IV</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-5.xhtml">
+										<span epub:type="ordinal z3998:roman">V</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-6.xhtml">
+										<span epub:type="ordinal z3998:roman">VI</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-7.xhtml">
+										<span epub:type="ordinal z3998:roman">VII</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-8.xhtml">
+										<span epub:type="ordinal z3998:roman">VIII</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-9.xhtml">
+										<span epub:type="ordinal z3998:roman">IX</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-10.xhtml">
+										<span epub:type="ordinal z3998:roman">X</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-11.xhtml">
+										<span epub:type="ordinal z3998:roman">XI</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-12.xhtml">
+										<span epub:type="ordinal z3998:roman">XII</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-13.xhtml">
+										<span epub:type="ordinal z3998:roman">XIII</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-14.xhtml">
+										<span epub:type="ordinal z3998:roman">XIV</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-15.xhtml">
+										<span epub:type="ordinal z3998:roman">XV</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-16.xhtml">
+										<span epub:type="ordinal z3998:roman">XVI</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-1-17.xhtml">
+										<span epub:type="ordinal z3998:roman">XVII</span>
+									</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span>: Tom Outland’s Story</a>
+							<ol>
+								<li>
+									<a href="text/chapter-2-1.xhtml">
+										<span epub:type="ordinal z3998:roman">I</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-2.xhtml">
+										<span epub:type="ordinal z3998:roman">II</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-3.xhtml">
+										<span epub:type="ordinal z3998:roman">III</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-4.xhtml">
+										<span epub:type="ordinal z3998:roman">IV</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-5.xhtml">
+										<span epub:type="ordinal z3998:roman">V</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-6.xhtml">
+										<span epub:type="ordinal z3998:roman">VI</span>
+									</a>
+								</li>
+								<li>
+									<a href="text/chapter-2-7.xhtml">
+										<span epub:type="ordinal z3998:roman">VII</span>
+									</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span>: The Professor</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-1.xhtml">
+								<span epub:type="ordinal z3998:roman">I</span>
+							</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-2.xhtml">
+								<span epub:type="ordinal z3998:roman">II</span>
+							</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-3.xhtml">
+								<span epub:type="ordinal z3998:roman">III</span>
+							</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-4.xhtml">
+								<span epub:type="ordinal z3998:roman">IV</span>
+							</a>
+						</li>
+						<li>
+							<a href="text/chapter-3-5.xhtml">
+								<span epub:type="ordinal z3998:roman">V</span>
+							</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,7 +194,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/book-1.xhtml" epub:type="bodymatter">The Professor’s House</a>
 				</li>
 			</ol>
 		</nav>
