--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -26,89 +26,55 @@
 							<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span>: The Family</a>
 							<ol>
 								<li>
-									<a href="text/chapter-1-1.xhtml">
-										<span epub:type="ordinal z3998:roman">I</span>
-									</a>
+									<a href="text/chapter-1-1.xhtml" epub:type="ordinal z3998:roman">I</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-2.xhtml">
-										<span epub:type="ordinal z3998:roman">II</span>
-									</a>
+									<a href="text/chapter-1-2.xhtml" epub:type="ordinal z3998:roman">II</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-3.xhtml">
-										<span epub:type="ordinal z3998:roman">III</span>
-									</a>
+									<a href="text/chapter-1-3.xhtml" epub:type="ordinal z3998:roman">III</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-4.xhtml">
-										<span epub:type="ordinal z3998:roman">IV</span>
-									</a>
+									<a href="text/chapter-1-4.xhtml" epub:type="ordinal z3998:roman">IV</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-5.xhtml">
-										<span epub:type="ordinal z3998:roman">V</span>
-									</a>
+									<a href="text/chapter-1-5.xhtml" epub:type="ordinal z3998:roman">V</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-6.xhtml">
-										<span epub:type="ordinal z3998:roman">VI</span>
-									</a>
+									<a href="text/chapter-1-6.xhtml" epub:type="ordinal z3998:roman">VI</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-7.xhtml">
-										<span epub:type="ordinal z3998:roman">VII</span>
-									</a>
+									<a href="text/chapter-1-7.xhtml" epub:type="ordinal z3998:roman">VII</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-8.xhtml">
-										<span epub:type="ordinal z3998:roman">VIII</span>
-									</a>
+									<a href="text/chapter-1-8.xhtml" epub:type="ordinal z3998:roman">VIII</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-9.xhtml">
-										<span epub:type="ordinal z3998:roman">IX</span>
-									</a>
+									<a href="text/chapter-1-9.xhtml" epub:type="ordinal z3998:roman">IX</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-10.xhtml">
-										<span epub:type="ordinal z3998:roman">X</span>
-									</a>
+									<a href="text/chapter-1-10.xhtml" epub:type="ordinal z3998:roman">X</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-11.xhtml">
-										<span epub:type="ordinal z3998:roman">XI</span>
-									</a>
+									<a href="text/chapter-1-11.xhtml" epub:type="ordinal z3998:roman">XI</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-12.xhtml">
-										<span epub:type="ordinal z3998:roman">XII</span>
-									</a>
+									<a href="text/chapter-1-12.xhtml" epub:type="ordinal z3998:roman">XII</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-13.xhtml">
-										<span epub:type="ordinal z3998:roman">XIII</span>
-									</a>
+									<a href="text/chapter-1-13.xhtml" epub:type="ordinal z3998:roman">XIII</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-14.xhtml">
-										<span epub:type="ordinal z3998:roman">XIV</span>
-									</a>
+									<a href="text/chapter-1-14.xhtml" epub:type="ordinal z3998:roman">XIV</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-15.xhtml">
-										<span epub:type="ordinal z3998:roman">XV</span>
-									</a>
+									<a href="text/chapter-1-15.xhtml" epub:type="ordinal z3998:roman">XV</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-16.xhtml">
-										<span epub:type="ordinal z3998:roman">XVI</span>
-									</a>
+									<a href="text/chapter-1-16.xhtml" epub:type="ordinal z3998:roman">XVI</a>
 								</li>
 								<li>
-									<a href="text/chapter-1-17.xhtml">
-										<span epub:type="ordinal z3998:roman">XVII</span>
-									</a>
+									<a href="text/chapter-1-17.xhtml" epub:type="ordinal z3998:roman">XVII</a>
 								</li>
 							</ol>
 						</li>
@@ -116,39 +82,25 @@
 							<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span>: Tom Outland’s Story</a>
 							<ol>
 								<li>
-									<a href="text/chapter-2-1.xhtml">
-										<span epub:type="ordinal z3998:roman">I</span>
-									</a>
+									<a href="text/chapter-2-1.xhtml" epub:type="ordinal z3998:roman">I</a>
 								</li>
 								<li>
-									<a href="text/chapter-2-2.xhtml">
-										<span epub:type="ordinal z3998:roman">II</span>
-									</a>
+									<a href="text/chapter-2-2.xhtml" epub:type="ordinal z3998:roman">II</a>
 								</li>
 								<li>
-									<a href="text/chapter-2-3.xhtml">
-										<span epub:type="ordinal z3998:roman">III</span>
-									</a>
+									<a href="text/chapter-2-3.xhtml" epub:type="ordinal z3998:roman">III</a>
 								</li>
 								<li>
-									<a href="text/chapter-2-4.xhtml">
-										<span epub:type="ordinal z3998:roman">IV</span>
-									</a>
+									<a href="text/chapter-2-4.xhtml" epub:type="ordinal z3998:roman">IV</a>
 								</li>
 								<li>
-									<a href="text/chapter-2-5.xhtml">
-										<span epub:type="ordinal z3998:roman">V</span>
-									</a>
+									<a href="text/chapter-2-5.xhtml" epub:type="ordinal z3998:roman">V</a>
 								</li>
 								<li>
-									<a href="text/chapter-2-6.xhtml">
-										<span epub:type="ordinal z3998:roman">VI</span>
-									</a>
+									<a href="text/chapter-2-6.xhtml" epub:type="ordinal z3998:roman">VI</a>
 								</li>
 								<li>
-									<a href="text/chapter-2-7.xhtml">
-										<span epub:type="ordinal z3998:roman">VII</span>
-									</a>
+									<a href="text/chapter-2-7.xhtml" epub:type="ordinal z3998:roman">VII</a>
 								</li>
 							</ol>
 						</li>
@@ -156,29 +108,19 @@
 							<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span>: The Professor</a>
 						</li>
 						<li>
-							<a href="text/chapter-3-1.xhtml">
-								<span epub:type="ordinal z3998:roman">I</span>
-							</a>
+							<a href="text/chapter-3-1.xhtml" epub:type="ordinal z3998:roman">I</a>
 						</li>
 						<li>
-							<a href="text/chapter-3-2.xhtml">
-								<span epub:type="ordinal z3998:roman">II</span>
-							</a>
+							<a href="text/chapter-3-2.xhtml" epub:type="ordinal z3998:roman">II</a>
 						</li>
 						<li>
-							<a href="text/chapter-3-3.xhtml">
-								<span epub:type="ordinal z3998:roman">III</span>
-							</a>
+							<a href="text/chapter-3-3.xhtml" epub:type="ordinal z3998:roman">III</a>
 						</li>
 						<li>
-							<a href="text/chapter-3-4.xhtml">
-								<span epub:type="ordinal z3998:roman">IV</span>
-							</a>
+							<a href="text/chapter-3-4.xhtml" epub:type="ordinal z3998:roman">IV</a>
 						</li>
 						<li>
-							<a href="text/chapter-3-5.xhtml">
-								<span epub:type="ordinal z3998:roman">V</span>
-							</a>
+							<a href="text/chapter-3-5.xhtml" epub:type="ordinal z3998:roman">V</a>
 						</li>
 					</ol>
 				</li>
