Fixed page breaks identified by lint

--- a/src/epub/text/epigraph.xhtml
+++ b/src/epub/text/epigraph.xhtml
@@ -9,7 +9,7 @@
 		<section id="epigraph" epub:type="epigraph">
 			<blockquote>
 				<p>“A turquoise set in silver; wasn’t it?⁠ ⁠… Yes, a turquoise set in dull silver.</p>
-				<cite>—⁠Louie Marsellus</cite>
+				<cite>—⁠⁠Louie Marsellus</cite>
 			</blockquote>
 		</section>
 	</body>
