--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,7 +7,9 @@
 	</head>
 	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="dedication" epub:type="dedication">
-			<p><i>For Jan, because he likes narrative</i></p>
+			<p>
+				<i>For Jan, because he likes narrative</i>
+			</p>
 		</section>
 	</body>
 </html>
